--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,36 +1,36 @@
-/**
-  * TAILWIND UTILITY CLASSES TO BE ADDED HERE
-  * PUT COMMENTS TO INDICATE WHAT COMPONENT THEY ARE FOR
- */
+/*GOOGLE FONT*/
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Poppins:wght@200;400;500;700&display=swap');
 
+/*TAILWIND DIRECTIVES*/
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
+/*GLOBAL SETTING*/
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-/** THE MAIN CONTAINER THE WRAPS THE INTIRE APP. 
-    * THIS CLASS CAN BE FOUND IN THE _APP.JS FILE
-  */
+/*MAIN CONTAINER*/
 .main-container {
-  @apply...
+  @apply min-h-screen;
 }
 
-.container {
-  @apply...
+.sub-container {
+  @apply max-w-screen-lg m-auto
+}
+
+/* ATENEO SPOTLIGHT */
+.ateneo-spotlight-container-body {
+  @apply my-10 grid gap-10 grid-cols-1 md:grid-cols-3;
+}
+
+.ateneo-spotlight-item {
+  @apply text-center;
+}
+
+.more-button{
+  @apply flex justify-center;
 }
