--- a/styles/home.css
+++ b/styles/home.css
@@ -20,7 +20,7 @@ root {
 
 /*NAVIGATION*/
 nav {
-    height: 6rem;
+    height: 7rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -166,6 +166,7 @@ nav {
 
 /* ATENEO SPOTLIGHT */
 .ateneo-spotlight {
+    min-height: 500px;
     background-color: var(--primary_blue);
     padding: 2.5rem 0;
     color: var(--primary_white);
@@ -226,9 +227,9 @@ nav {
     margin-bottom: 1.8rem;
 }
 
-.ateneo-news-body{
+.ateneo-news-body {
     padding: 2rem 0;
-    display:grid;
+    display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 2rem;
 }
@@ -241,9 +242,40 @@ nav {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transition: 100ms ease-in-out;
 }
+
+.ateneo-news-body-child:hover {
+    cursor: pointer;
+    transform: translate3d(0, -30px, 0);
+}
+
 .ateneo-news-body .ateneo-news-body-child:nth-child(even) {
     transform: translate3d(0, -30px, 0);
+}
+
+.ateneo-news-body .ateneo-news-body-child:nth-child(even):hover {
+    transform: translate3d(0, -40px, 0);
+}
+
+.news-logo {
+    background-color: var(--primary_blue);
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+    margin-bottom: 1.6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ateneo-news-body-child h4 {
+    font-family: 'poppins', sans-serif;
+}
+
+.ateneo-news-body-child p {
+    text-align: center;
+    font-family: 'poppins', sans-serif;
 }
 
 /* FOOTER */
@@ -339,6 +371,8 @@ nav {
     .ateneo-news-title {
         font-size: 1.8rem;
     }
+
+
 }
 
 @media (max-width: 620px) {
@@ -358,6 +392,10 @@ nav {
         display: block;
         display: flex;
         align-items: center;
+    }
+
+    .navigation-logo:hover {
+        cursor: pointer;
     }
 
     /* SIDE MOBILE NAVIGATION */
@@ -417,6 +455,7 @@ nav {
     .ateneo-news {
         padding: 2.5rem 1rem;
     }
+
     .ateneo-news-title {
         font-size: 1.4rem;
     }
