backend to fetch data has been commented out. added couple of routes unfinished routes were marked not found

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,10 +27,31 @@
   @apply my-10 grid gap-10 grid-cols-1 md:grid-cols-3;
 }
 
-.ateneo-spotlight-item {
-  @apply text-center;
+.more-button {
+  @apply flex justify-center;
 }
 
-.more-button{
-  @apply flex justify-center;
+/* EACH NEWS */
+.each-news-container {
+  @apply min-h-[500px] grid grid-cols-1 md:grid-cols-2 mb-10 mx-4 md:mx-10 my-4 ;
+}
+
+.each-left-content{
+  @apply flex justify-center my-5 mr-0 md:mr-5;
+}
+
+.each-right-content{
+  @apply flex flex-col justify-center items-center
+}
+
+.each-right-header{
+  @apply text-[1.6rem] md:text-[2rem] lg:text-[2.5rem] text-center leading-tight px-5 md:px-0
+}
+
+.each-right-time {
+  @apply self-center md:self-start
+}
+
+.each-right-description{
+  @apply text-2xl text-justify indent-10 px-5 md:px-0 py-6 font-normal leading-10
 }
