--- a/styles/home.css
+++ b/styles/home.css
@@ -174,6 +174,8 @@ nav {
 
 .ateneo-spotlight-item-image {
     transition: 100ms ease-in-out;
+    margin: 0 auto;
+    max-width: 300px;
 }
 
 .ateneo-spotlight-item-image:hover {
@@ -193,6 +195,7 @@ nav {
     font-size: 1.2rem;
     font-weight: 500;
     margin: 0.5rem 0;
+    text-align: center;
 }
 
 .button-more-spotlight {
@@ -283,6 +286,12 @@ nav {
     height: 500px;
     background-color: var(--secondary_black);
     color: #FFFFFF;
+}
+
+/* EACH COMPONENT*/
+.each-right-header, .each-right-time,
+.each-right-description, .notFound{
+    font-family: 'poppins', sans-serif;
 }
 
 /*MEDIA QUERY*/
@@ -459,7 +468,6 @@ nav {
     .ateneo-news-title {
         font-size: 1.4rem;
     }
-
 }
 
 /*THIS IS THE SMALLEST SIZE FOR LITERAL PHONE*/
