Added the message integration. Added the configuration for the test

--- a/styles/home.css
+++ b/styles/home.css
@@ -300,7 +300,9 @@ nav {
 .each-right-header,
 .each-right-time,
 .each-right-description,
-.notFound {
+.notFound,
+.contact-title,
+.contact-header-form {
     font-family: 'poppins', sans-serif;
 }
 
