--- a/styles/home.css
+++ b/styles/home.css
@@ -1,6 +1,6 @@
 /* GLOBAL COLORS*/
 :root {
-    --primary_blue: #327CEA;
+    --primary_blue: #3A53A4;
     --primary_white: #FFFFFF;
     --secondary_black: #17161A;
     --secondary_semi_black: #1b1a1e99;
@@ -19,6 +19,10 @@ root {
 /* GLOBAL FONT WEIGHT*/
 
 /*NAVIGATION*/
+.navnav {
+    background-color: var(--primary_blue);
+}
+
 nav {
     height: 7rem;
     display: flex;
@@ -37,11 +41,11 @@ nav {
     font-weight: 500;
     transition: 100ms;
     font-family: "poppins", sans-serif;
+    color: #FFFFFF;
 }
 
 .link:hover {
     cursor: pointer;
-    color: var(--primary_blue);
     transform: translate3d(0, -10px, 0);
 }
 
@@ -50,7 +54,7 @@ nav {
     margin-left: 1.5rem;
     font-weight: 500;
     background-color: var(--primary_blue);
-    border: 3px solid var(--primary_blue);
+    border: 3px solid var(--primary_white);
     color: var(--primary_white);
     border-radius: 50px;
     font-family: "poppins", sans-serif;
@@ -61,7 +65,7 @@ nav {
 .link-contacts:hover {
     cursor: pointer;
     background-color: var(--primary_white);
-    border: 3px solid var(--primary_blue);
+    border: 3px solid var(--primary_white);
     color: var(--primary_blue);
 }
 
@@ -128,8 +132,8 @@ nav {
 
 /* WELCOME COMPONENT */
 .welcome-component {
-    background-image: url("../public/images/welcome.jpg");
-    filter: brightness(0.9);
+    background-image: url("../public/logo/xx.jpg");
+    filter: brightness(0.8);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -223,6 +227,7 @@ nav {
 }
 
 .ateneo-news-title {
+    color: var(--primary_blue);
     font-family: "poppins", sans-serif;
     font-size: 2.5rem;
     text-align: center;
@@ -246,6 +251,7 @@ nav {
     justify-content: center;
     align-items: center;
     transition: 100ms ease-in-out;
+    box-shadow: 2px 2px 5px rgb(223, 223, 223);
 }
 
 .ateneo-news-body-child:hover {
@@ -303,8 +309,18 @@ nav {
 .notFound,
 .contact-title,
 .contact-header-form,
-.back {
+.back,
+.ee {
     font-family: 'poppins', sans-serif;
+}
+
+.cons {
+    background-image: url("../public/images/xxxx.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 500;
 }
 
 /*MEDIA QUERY*/
@@ -488,4 +504,20 @@ nav {
     .ateneo-news-body .ateneo-news-body-child:nth-child(even) {
         transform: translate3d(0, 0px, 0);
     }
+}
+
+
+/* ADDMISSION */
+
+.kaka {
+    height: 100px;
+    width: "100%";
+    background-color: rebeccapurple;
+    background-image: url("../public/logo/xx.jpg");
+    filter: brightness(0.8);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 5px;
+    margin: 0 5px
 }
